# 宏定义
MACRO(GROUP_FILES src_files root_path)
        SET(cur_dir ${root_path})
        FOREACH(group_files ${${src_files}})
            STRING(REGEX REPLACE ${cur_dir}/\(.*\) \\1 sgbd_fpath ${group_files})
            STRING(REGEX REPLACE "\(.*\)/.*" \\1 sgbd_group_name ${sgbd_fpath})
            STRING(COMPARE EQUAL ${sgbd_fpath} ${sgbd_group_name} sgbd_nogroup)
            STRING(REPLACE "/" "\\" sgbd_group_name ${sgbd_group_name})
            IF(sgbd_nogroup)
                SET(sgbd_group_name "Common")
            ENDIF(sgbd_nogroup)
                
            SOURCE_GROUP(${sgbd_group_name} FILES ${group_files})   
        ENDFOREACH(group_files)
ENDMACRO(GROUP_FILES)

# 库依赖
MESSAGE(STATUS "AresPhysics 3rdParty Dependences:")
FIND_PACKAGE(Boost 1.5.2 REQUIRED)
MESSAGE(STATUS "Boost Include Directory:" ${Boost_INCLUDE_DIRS})
MESSAGE(STATUS "Boost Library Directory:" ${Boost_LIBRARY_DIRS})

# 附加包含目录
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Include)

# 附加库目录
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

# 添加预处理器
IF(WIN32)
	ADD_DEFINITIONS(-DPLATFORM_WIN32)
ELSEIF(APPLE)
	IF(${CMAKE_OSX_SYSROOT} MATCHES "MacOSX.platform")
		ADD_DEFINITIONS(-DPLATFORM_MAC)
	ELSE()
		ADD_DEFINITIONS(-DPLATFORM_IOS)
	ENDIF()
ENDIF()

# 设置模块名称
SET(MODULE_NAME Physics)

# 源文件路径
SET(MODULE_HEADER_PATH ${PROJECT_SOURCE_DIR}/Include/${MODULE_NAME})
SET(MODULE_SOURCE_PATH ${PROJECT_SOURCE_DIR}/Source/${MODULE_NAME})

# Visual Studio Configure http://www.oschina.net/code/explore/mariadb-5.2.4/CMakeLists.txt
IF(MSVC)
	# 禁用特定警告
	SET(CMAKE_CXX_FLAGS_DEBUG			"${CMAKE_CXX_FLAGS_DEBUG} /wd4996 /MP")
    SET(CMAKE_CXX_FLAGS_RELEASE			"${CMAKE_CXX_FLAGS_RELEASE} /wd4996 /MP")
    SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO	"${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /wd4996")
    SET(CMAKE_C_FLAGS_DEBUG				"${CMAKE_C_FLAGS_DEBUG} /wd4996")
    SET(CMAKE_C_FLAGS_RELEASE			"${CMAKE_C_FLAGS_RELEASE} /wd4996")
    SET(CMAKE_C_FLAGS_RELWITHDEBINFO	"${CMAKE_C_FLAGS_RELWITHDEBINFO} /wd4996")

	# MT MTD
	STRING(REPLACE "/MD"  "/MT"  CMAKE_C_FLAGS_RELEASE          ${CMAKE_C_FLAGS_RELEASE})
    STRING(REPLACE "/MD"  "/MT"  CMAKE_C_FLAGS_RELWITHDEBINFO   ${CMAKE_C_FLAGS_RELWITHDEBINFO})
    STRING(REPLACE "/MDd" "/MTd" CMAKE_C_FLAGS_DEBUG            ${CMAKE_C_FLAGS_DEBUG})
    STRING(REPLACE "/MDd" "/MTd" CMAKE_C_FLAGS_DEBUG_INIT       ${CMAKE_C_FLAGS_DEBUG_INIT})
    STRING(REPLACE "/MD"  "/MT"  CMAKE_CXX_FLAGS_RELEASE        ${CMAKE_CXX_FLAGS_RELEASE})
    STRING(REPLACE "/MD"  "/MT"  CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
    STRING(REPLACE "/MDd" "/MTd" CMAKE_CXX_FLAGS_DEBUG          ${CMAKE_CXX_FLAGS_DEBUG})
    STRING(REPLACE "/MDd" "/MTd" CMAKE_CXX_FLAGS_DEBUG_INIT     ${CMAKE_CXX_FLAGS_DEBUG_INIT})
ENDIF(MSVC)

# 包含源文件
# TEMPLATE
#SET(GROUP_TEMPLATE_SOURCE_FILES
#	${MODULE_HEADER_PATH}/lzoconf.h
#	${MODULE_SOURCE_PATH}/minilzo.c
#)
#SOURCE_GROUP("3rdParty\\lzo" FILES ${GROUP_LZO_SOURCE_FILES})
# DBVT
SET(GROUP_DBVT_SOURCE_FILES
	${MODULE_HEADER_PATH}/Dbvt.h
	${MODULE_SOURCE_PATH}/Dbvt.cpp
)
SOURCE_GROUP("Accelerators\\DBVT" FILES ${GROUP_DBVT_SOURCE_FILES})

# KDT
SET(GROUP_KDT_SOURCE_FILES
	${MODULE_HEADER_PATH}/Kdt.h
	${MODULE_HEADER_PATH}/KdtBuilder.h
	${MODULE_SOURCE_PATH}/KdtBuilder.cpp
)
SOURCE_GROUP("Accelerators\\KDT" FILES ${GROUP_KDT_SOURCE_FILES})

# Quadtree
SET(GROUP_QUADTREE_SOURCE_FILES
	${MODULE_HEADER_PATH}/QuadTree.hpp
	${MODULE_HEADER_PATH}/QuadTreeMember.hpp
	${MODULE_HEADER_PATH}/QuadTreeNode.hpp
)
SOURCE_GROUP("Accelerators\\Quadtree" FILES ${GROUP_QUADTREE_SOURCE_FILES})

# CSG
SET(GROUP_CSG_SOURCE_FILES
)
SOURCE_GROUP("CSG" FILES ${GROUP_CSG_SOURCE_FILES})

# Navigation A*
SET(GROUP_ASTAR_SOURCE_FILES
	${MODULE_HEADER_PATH}/AresAStar.h
	${MODULE_SOURCE_PATH}/AresAStar.cpp
)
SOURCE_GROUP("Navigation\\AStar" FILES ${GROUP_ASTAR_SOURCE_FILES})

# Navigation Map
SET(GROUP_NAVMAP_SOURCE_FILES
	${MODULE_HEADER_PATH}/AresNavMap.h
	${MODULE_HEADER_PATH}/AresNavGrid.h
	${MODULE_HEADER_PATH}/AresNavTeleporter.h
	${MODULE_HEADER_PATH}/AresStaticNavMesh.h
	${MODULE_SOURCE_PATH}/AresNavGrid.cpp
	${MODULE_SOURCE_PATH}/AresNavTeleporter.cpp
	${MODULE_SOURCE_PATH}/AresStaticNavMesh.cpp
)
SOURCE_GROUP("Navigation\\Map" FILES ${GROUP_NAVMAP_SOURCE_FILES})

# Recast 
SET(GROUP_NAVRECAST_SOURCE_FILES
	${MODULE_HEADER_PATH}/AresRecast.h
	${MODULE_HEADER_PATH}/AresChunkyTriMesh.h
	${MODULE_HEADER_PATH}/AresStaticMeshTiledBuilder.h
	${MODULE_SOURCE_PATH}/AresRecast.cpp
	${MODULE_SOURCE_PATH}/AresRecastMesh.cpp
	${MODULE_SOURCE_PATH}/AresRecastRegion.cpp
	${MODULE_SOURCE_PATH}/RecastMeshDetail.cpp
	${MODULE_SOURCE_PATH}/AresChunkyTriMesh.cpp
	${MODULE_SOURCE_PATH}/AresStaticMeshTiledBuilder.cpp
)
SOURCE_GROUP("Navigation\\Recast" FILES ${GROUP_NAVRECAST_SOURCE_FILES})

# Animation
SET(GROUP_ANIMATION_SOURCE_FILES
	${MODULE_HEADER_PATH}/Skeleton.h
	${MODULE_HEADER_PATH}/KeyFrame.h
	${MODULE_HEADER_PATH}/AnimationTrack.h
	${MODULE_SOURCE_PATH}/KeyFrame.cpp
)
SOURCE_GROUP("Physx\\Animation" FILES ${GROUP_ANIMATION_SOURCE_FILES})

# Collide
SET(GROUP_COLLIDE_SOURCE_FILES
	${MODULE_HEADER_PATH}/Collide.h
	${MODULE_HEADER_PATH}/CollideAlgorithm.h
	${MODULE_HEADER_PATH}/XenoCollide.h
	${MODULE_SOURCE_PATH}/Collide.cpp
	${MODULE_SOURCE_PATH}/CollideAlgorithm.cpp
	${MODULE_SOURCE_PATH}/XenoCollide.cpp
)
SOURCE_GROUP("Physx\\Collide" FILES ${GROUP_COLLIDE_SOURCE_FILES})

# Curves
SET(GROUP_CURVES_SOURCE_FILES
	${MODULE_HEADER_PATH}/Bezier3.h
	${MODULE_HEADER_PATH}/Catmull-Rom3.h
	${MODULE_HEADER_PATH}/Spiral3.h
	${MODULE_SOURCE_PATH}/Bezier3.cpp
	${MODULE_SOURCE_PATH}/Catmull-Rom3.cpp
	${MODULE_SOURCE_PATH}/Spiral3.cpp
)
SOURCE_GROUP("Physx\\Curves" FILES ${GROUP_CURVES_SOURCE_FILES})

# Dynamics
SET(GROUP_DYNAMICS_SOURCE_FILES
	${MODULE_HEADER_PATH}/AresDefaultMotionState.h
	${MODULE_HEADER_PATH}/AresActionInterface.h
	${MODULE_HEADER_PATH}/PhysicsWorld.h
	${MODULE_HEADER_PATH}/RigidBody.h
	${MODULE_SOURCE_PATH}/PhysicsWorld.cpp
	${MODULE_SOURCE_PATH}/RigidBody.cpp
)
SOURCE_GROUP("Physx\\Dynamics\\Dynamics" FILES ${GROUP_DYNAMICS_SOURCE_FILES})

# Shapes
SET(GROUP_SHAPES_SOURCE_FILES
	${MODULE_HEADER_PATH}/Box3.h
	${MODULE_HEADER_PATH}/Capsule3.h
	${MODULE_HEADER_PATH}/CollMap.h
	${MODULE_HEADER_PATH}/CompoundShape.h
	${MODULE_HEADER_PATH}/Frustum3.h
	${MODULE_HEADER_PATH}/HeightField.h
	${MODULE_HEADER_PATH}/KdtTriangleMesh.h
	${MODULE_HEADER_PATH}/Line3.h
	${MODULE_HEADER_PATH}/Parabola3.h
	${MODULE_HEADER_PATH}/Plane3.h
	${MODULE_HEADER_PATH}/Rect3.h
	${MODULE_HEADER_PATH}/Rectangle3.h
	${MODULE_HEADER_PATH}/Segment3.h
	${MODULE_HEADER_PATH}/Shape.h
	${MODULE_HEADER_PATH}/Shapes.h
	${MODULE_HEADER_PATH}/Sphere3.h
	${MODULE_HEADER_PATH}/Triangle3.h
	${MODULE_SOURCE_PATH}/Box3.cpp
	${MODULE_SOURCE_PATH}/Capsule3.cpp
	${MODULE_SOURCE_PATH}/CollMap.cpp
	${MODULE_SOURCE_PATH}/CompoundShape.cpp
	${MODULE_SOURCE_PATH}/Frustum3.cpp
	${MODULE_SOURCE_PATH}/HeightField.cpp
	${MODULE_SOURCE_PATH}/KdtTriangleMesh.cpp
	${MODULE_SOURCE_PATH}/Line3.cpp
	${MODULE_SOURCE_PATH}/Parabola3.cpp
	${MODULE_SOURCE_PATH}/Plane3.cpp
	${MODULE_SOURCE_PATH}/Rect3.cpp
	${MODULE_SOURCE_PATH}/Rectangle3.cpp
	${MODULE_SOURCE_PATH}/Segment3.cpp
	${MODULE_SOURCE_PATH}/Shape.cpp
	${MODULE_SOURCE_PATH}/Sphere3.cpp
	${MODULE_SOURCE_PATH}/Triangle3.cpp
)
SOURCE_GROUP("Physx\\Shapes" FILES ${GROUP_SHAPES_SOURCE_FILES})

# Algorithm
SET(GROUP_ALGORITHM_SOURCE_FILES
	${MODULE_HEADER_PATH}/BuildTriangle3FromRectangle.h
	${MODULE_HEADER_PATH}/ContBox3.h
	${MODULE_HEADER_PATH}/ConvexHull2D.h
	${MODULE_HEADER_PATH}/ConvexHull3D.h
	${MODULE_HEADER_PATH}/DistLine3Point3.h
	${MODULE_HEADER_PATH}/DistLine3Segment3.h
	${MODULE_HEADER_PATH}/DistLine3Triangle3.h
	${MODULE_HEADER_PATH}/DistVector3Triangle3.h
	${MODULE_HEADER_PATH}/Intersect.h
	${MODULE_HEADER_PATH}/IntrBox3Sphere3.h
	${MODULE_HEADER_PATH}/IntrBox3Triangle3.h
	${MODULE_HEADER_PATH}/IntrLine3Box3.h
	${MODULE_HEADER_PATH}/IntrLine3Plane3.h
	${MODULE_HEADER_PATH}/IntrParabola3Plane3.h
	${MODULE_HEADER_PATH}/IntrParabola3Rect3.h
	${MODULE_HEADER_PATH}/IntrParabola3Triangle3.h
	${MODULE_HEADER_PATH}/IntrRect3Rect3.h
	${MODULE_HEADER_PATH}/IntrSegment3Sphere3.h
	${MODULE_HEADER_PATH}/IntrSegment3Triangle3.h
	${MODULE_HEADER_PATH}/IntrUtility3.h
	${MODULE_SOURCE_PATH}/BuildTriangle3FromRectangle.cpp
	${MODULE_SOURCE_PATH}/ContBox3.cpp
	${MODULE_SOURCE_PATH}/ConvexHull2D.cpp
	${MODULE_SOURCE_PATH}/ConvexHull3D.cpp
	${MODULE_SOURCE_PATH}/DistLine3Point3.cpp
	${MODULE_SOURCE_PATH}/DistLine3Triangle3.cpp
	${MODULE_SOURCE_PATH}/DistParabola3Point3.cpp
	${MODULE_SOURCE_PATH}/DistSegment3Segment3.cpp
	${MODULE_SOURCE_PATH}/DistSegment3Triangle3.cpp
	${MODULE_SOURCE_PATH}/DistVector3Triangle3.cpp
	${MODULE_SOURCE_PATH}/Intersect.cpp
	${MODULE_SOURCE_PATH}/IntrBox3Sphere3.cpp
	${MODULE_SOURCE_PATH}/IntrBox3Triangle3.cpp
	${MODULE_SOURCE_PATH}/IntrCapsule3Capsule3.cpp
	${MODULE_SOURCE_PATH}/IntrCapsule3Triangle3.cpp
	${MODULE_SOURCE_PATH}/IntrLine3Box3.cpp
	${MODULE_SOURCE_PATH}/IntrLine3Plane3.cpp
	${MODULE_SOURCE_PATH}/IntrParabola3Plane3.cpp
	${MODULE_SOURCE_PATH}/IntrParabola3Rect3.cpp
	${MODULE_SOURCE_PATH}/IntrParabola3Triangle3.cpp
	${MODULE_SOURCE_PATH}/IntrRect3Rect3.cpp
	${MODULE_SOURCE_PATH}/IntrSegment3Sphere3.cpp
	${MODULE_SOURCE_PATH}/IntrSegment3Triangle3.cpp
	${MODULE_SOURCE_PATH}/IntrUtility3.cpp
)
SOURCE_GROUP("Physx\\Algorithm" FILES ${GROUP_ALGORITHM_SOURCE_FILES})

# SoftBody
SET(GROUP_SOFTBODY_SOURCE_FILES
	${MODULE_HEADER_PATH}/SoftBody.h
	${MODULE_HEADER_PATH}/MassForceGenerator.h
	${MODULE_HEADER_PATH}/MassSpringSystem.h
	${MODULE_SOURCE_PATH}/MassForceGenerator.cpp
	${MODULE_SOURCE_PATH}/MassSpringSystem.cpp
)
SOURCE_GROUP("SoftBody" FILES ${GROUP_SOFTBODY_SOURCE_FILES})

# Vehicle
SET(GROUP_VEHICLE_SOURCE_FILES
	${MODULE_HEADER_PATH}/AresRaycastVehicle.h
	${MODULE_HEADER_PATH}/AresVehicleRaycaster.h
	${MODULE_SOURCE_PATH}/AresRaycastVehicle.cpp
	${MODULE_SOURCE_PATH}/AresVehicleRaycaster.cpp
)
SOURCE_GROUP("Physx\\Dynamics\\Vehicle" FILES ${GROUP_VEHICLE_SOURCE_FILES})

# World
SET(GROUP_WORLD_SOURCE_FILES
	${MODULE_HEADER_PATH}/Broadphase.h
	${MODULE_HEADER_PATH}/BroadphaseProxy.h
	${MODULE_HEADER_PATH}/DbvtBroadphase.h
	${MODULE_HEADER_PATH}/OverlappingPairCache.h
	${MODULE_HEADER_PATH}/CollisionObject.h
	${MODULE_HEADER_PATH}/CollisionWorld.h
	${MODULE_HEADER_PATH}/AresDispatch.h
	${MODULE_HEADER_PATH}/Contacts.h
	${MODULE_HEADER_PATH}/MotionState.h
	${MODULE_HEADER_PATH}/SegmentDetect.h
	${MODULE_SOURCE_PATH}/DbvtBroadphase.cpp
	${MODULE_SOURCE_PATH}/OverlappingPairCache.cpp
	${MODULE_SOURCE_PATH}/CollisionObject.cpp
	${MODULE_SOURCE_PATH}/CollisionWorld.cpp
)
SOURCE_GROUP("Physx\\World" FILES ${GROUP_WORLD_SOURCE_FILES})


# Zone
SET(GROUP_ZONE_SOURCE_FILES
	${MODULE_HEADER_PATH}/WaterZoneMgr.h
	${MODULE_SOURCE_PATH}/WaterZoneMgr.cpp
)
SOURCE_GROUP("Zone" FILES ${GROUP_ZONE_SOURCE_FILES})

# CSG
SET(GROUP_CSG_SOURCE_FILES
	${MODULE_HEADER_PATH}/AresCSG.h
	${MODULE_SOURCE_PATH}/AresCSG.cpp
)
SOURCE_GROUP("CSG" FILES ${GROUP_CSG_SOURCE_FILES})

# Start Bullet
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/LinearMath)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletCollision/BroadphaseCollision/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletCollision/CollisionDispatch/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletCollision/CollisionShapes/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletCollision/Gimpact/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletCollision/NarrowPhaseCollision/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletDynamics/Character/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletDynamics/ConstraintSolver/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletDynamics/Dynamics/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletDynamics/Vehicle/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletDynamics/Featherstone)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletDynamics/MLCPSolvers)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/BulletSoftBody/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/ConvexDecomposition/)
INCLUDE_DIRECTORIES( ${MODULE_HEADER_PATH}/Bullet/HACD/)

file(GLOB_RECURSE BULLET_HEADER_FILES ${MODULE_HEADER_PATH}/Bullet/*.h ${MODULE_HEADER_PATH}/Bullet/*.inl)
file(GLOB_RECURSE BULLET_SOURCE_FILES ${MODULE_SOURCE_PATH}/Bullet/*.c ${MODULE_SOURCE_PATH}/Bullet/*.cpp)

GROUP_FILES(BULLET_HEADER_FILES ${MODULE_HEADER_PATH})
GROUP_FILES(BULLET_SOURCE_FILES ${MODULE_SOURCE_PATH})
# End Bullet

# 添加库
ADD_LIBRARY(AresPhysics 
	${GROUP_DBVT_SOURCE_FILES}
	${GROUP_KDT_SOURCE_FILES}
	${GROUP_QUADTREE_SOURCE_FILES}
	${GROUP_CSG_SOURCE_FILES}
	${GROUP_ASTAR_SOURCE_FILES}
	${GROUP_NAVMAP_SOURCE_FILES}
	${GROUP_NAVRECAST_SOURCE_FILES}
	${GROUP_ANIMATION_SOURCE_FILES}
	${GROUP_COLLIDE_SOURCE_FILES}
	${GROUP_CURVES_SOURCE_FILES}
	${GROUP_DYNAMICS_SOURCE_FILES}
	${GROUP_SHAPES_SOURCE_FILES}
	${GROUP_ALGORITHM_SOURCE_FILES}
	${GROUP_WORLD_SOURCE_FILES}
	${GROUP_SOFTBODY_SOURCE_FILES}
	${GROUP_ZONE_SOURCE_FILES}
	${GROUP_CSG_SOURCE_FILES}
	${GROUP_VEHICLE_SOURCE_FILES}
	
	${BULLET_HEADER_FILES}
	${BULLET_SOURCE_FILES}
)

# 设置属性
SET_TARGET_PROPERTIES(AresPhysics PROPERTIES FOLDER "Engine")
SET_TARGET_PROPERTIES(AresPhysics PROPERTIES COMPILE_FLAGS "/openmp")
#SET_TARGET_PROPERTIES(AresPhysics PROPERTIES COMPILE_FLAGS "/openmp-")