# 库依赖

# 附加包含目录
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Include/tolua++)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Include/tolua++/lua)

# 附加库目录

# 设置模块名称
SET(MODULE_NAME tolua++)

# 源文件路径
SET(MODULE_HEADER_PATH ${PROJECT_SOURCE_DIR}/Include/${MODULE_NAME})
SET(MODULE_SOURCE_PATH ${PROJECT_SOURCE_DIR}/Source/${MODULE_NAME})

# MSVC禁用特定警告(Visual Studio 8 and above)
IF(MSVC)
	SET(CMAKE_CXX_FLAGS_DEBUG			"${CMAKE_CXX_FLAGS_DEBUG} /wd4996 /MP")
    SET(CMAKE_CXX_FLAGS_RELEASE			"${CMAKE_CXX_FLAGS_RELEASE} /wd4996 /MP")
    SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO	"${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /wd4996")
    SET(CMAKE_C_FLAGS_DEBUG				"${CMAKE_C_FLAGS_DEBUG} /wd4996")
    SET(CMAKE_C_FLAGS_RELEASE			"${CMAKE_C_FLAGS_RELEASE} /wd4996")
    SET(CMAKE_C_FLAGS_RELWITHDEBINFO	"${CMAKE_C_FLAGS_RELWITHDEBINFO} /wd4996")

	# MT MTD
	STRING(REPLACE "/MD"  "/MT"  CMAKE_C_FLAGS_RELEASE          ${CMAKE_C_FLAGS_RELEASE})
    STRING(REPLACE "/MD"  "/MT"  CMAKE_C_FLAGS_RELWITHDEBINFO   ${CMAKE_C_FLAGS_RELWITHDEBINFO})
    STRING(REPLACE "/MDd" "/MTd" CMAKE_C_FLAGS_DEBUG            ${CMAKE_C_FLAGS_DEBUG})
    STRING(REPLACE "/MDd" "/MTd" CMAKE_C_FLAGS_DEBUG_INIT       ${CMAKE_C_FLAGS_DEBUG_INIT})
    STRING(REPLACE "/MD"  "/MT"  CMAKE_CXX_FLAGS_RELEASE        ${CMAKE_CXX_FLAGS_RELEASE})
    STRING(REPLACE "/MD"  "/MT"  CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
    STRING(REPLACE "/MDd" "/MTd" CMAKE_CXX_FLAGS_DEBUG          ${CMAKE_CXX_FLAGS_DEBUG})
    STRING(REPLACE "/MDd" "/MTd" CMAKE_CXX_FLAGS_DEBUG_INIT     ${CMAKE_CXX_FLAGS_DEBUG_INIT})
ENDIF(MSVC)

# 包含源文件
# tolua++
SET(GROUP_TOLUAPLUSPLUS_SOURCE_FILES
	${MODULE_HEADER_PATH}/tolua++.h
	${MODULE_HEADER_PATH}/tolua_event.h
	${MODULE_SOURCE_PATH}/tolua_event.c
	${MODULE_SOURCE_PATH}/tolua_is.c
	${MODULE_SOURCE_PATH}/tolua_map.c
	${MODULE_SOURCE_PATH}/tolua_push.c
	${MODULE_SOURCE_PATH}/tolua_to.c
)
SOURCE_GROUP("" FILES ${GROUP_TOLUAPLUSPLUS_SOURCE_FILES})

# lua
SET(GROUP_LUA_SOURCE_FILES
	${MODULE_HEADER_PATH}/lua/lapi.h
	${MODULE_HEADER_PATH}/lua/lauxlib.h
	${MODULE_HEADER_PATH}/lua/lcode.h
	${MODULE_HEADER_PATH}/lua/ldebug.h
	${MODULE_HEADER_PATH}/lua/ldo.h
	${MODULE_HEADER_PATH}/lua/lfunc.h
	${MODULE_HEADER_PATH}/lua/lgc.h
	${MODULE_HEADER_PATH}/lua/llex.h
	${MODULE_HEADER_PATH}/lua/llimits.h
	${MODULE_HEADER_PATH}/lua/lmem.h
	${MODULE_HEADER_PATH}/lua/lobject.h
	${MODULE_HEADER_PATH}/lua/lopcodes.h
	${MODULE_HEADER_PATH}/lua/lparser.h
	${MODULE_HEADER_PATH}/lua/lstate.h
	${MODULE_HEADER_PATH}/lua/lstring.h
	${MODULE_HEADER_PATH}/lua/ltable.h
	${MODULE_HEADER_PATH}/lua/ltm.h
	${MODULE_HEADER_PATH}/lua/lua.h
	${MODULE_HEADER_PATH}/lua/luaconf.h
	${MODULE_HEADER_PATH}/lua/lualib.h
	${MODULE_HEADER_PATH}/lua/lundump.h
	${MODULE_HEADER_PATH}/lua/lvm.h
	${MODULE_HEADER_PATH}/lua/lzio.h
	${MODULE_SOURCE_PATH}/lua/lapi.c
	${MODULE_SOURCE_PATH}/lua/lauxlib.c
	${MODULE_SOURCE_PATH}/lua/lbaselib.c
	${MODULE_SOURCE_PATH}/lua/lcode.c
	${MODULE_SOURCE_PATH}/lua/ldblib.c
	${MODULE_SOURCE_PATH}/lua/ldebug.c
	${MODULE_SOURCE_PATH}/lua/ldo.c
	${MODULE_SOURCE_PATH}/lua/ldump.c
	${MODULE_SOURCE_PATH}/lua/lfunc.c
	${MODULE_SOURCE_PATH}/lua/lgc.c
	${MODULE_SOURCE_PATH}/lua/linit.c
	${MODULE_SOURCE_PATH}/lua/liolib.c
	${MODULE_SOURCE_PATH}/lua/llex.c
	${MODULE_SOURCE_PATH}/lua/lmathlib.c
	${MODULE_SOURCE_PATH}/lua/lmem.c
	${MODULE_SOURCE_PATH}/lua/loadlib.c
	${MODULE_SOURCE_PATH}/lua/lobject.c
	${MODULE_SOURCE_PATH}/lua/lopcodes.c
	${MODULE_SOURCE_PATH}/lua/loslib.c
	${MODULE_SOURCE_PATH}/lua/lparser.c
	${MODULE_SOURCE_PATH}/lua/lstate.c
	${MODULE_SOURCE_PATH}/lua/lstring.c
	${MODULE_SOURCE_PATH}/lua/lstrlib.c
	${MODULE_SOURCE_PATH}/lua/ltable.c
	${MODULE_SOURCE_PATH}/lua/ltablib.c
	${MODULE_SOURCE_PATH}/lua/ltm.c
	${MODULE_SOURCE_PATH}/lua/lua.c
	${MODULE_SOURCE_PATH}/lua/luac.c
	${MODULE_SOURCE_PATH}/lua/lundump.c
	${MODULE_SOURCE_PATH}/lua/lvm.c
	${MODULE_SOURCE_PATH}/lua/lzio.c
	${MODULE_SOURCE_PATH}/lua/print.c
)
SOURCE_GROUP("lua-5.1.4" FILES ${GROUP_LUA_SOURCE_FILES})

# Bin文件
SET(GROUP_BIN_SOURCE_FILES
	${MODULE_SOURCE_PATH}/bin/tolua.c
	${MODULE_SOURCE_PATH}/bin/toluabind.c
	${MODULE_SOURCE_PATH}/bin/toluabind.h
)
SOURCE_GROUP("bin" FILES ${GROUP_BIN_SOURCE_FILES})

# 添加库
ADD_LIBRARY(${MODULE_NAME}
	${GROUP_TOLUAPLUSPLUS_SOURCE_FILES}
	${GROUP_LUA_SOURCE_FILES}
)

# 执行程序
ADD_EXECUTABLE(${MODULE_NAME}exe 
	${GROUP_BIN_SOURCE_FILES}
)

TARGET_LINK_LIBRARIES(${MODULE_NAME}exe ${MODULE_NAME})

# 设置属性
SET_TARGET_PROPERTIES(${MODULE_NAME} 	PROPERTIES FOLDER "Engine")
SET_TARGET_PROPERTIES(${MODULE_NAME}exe PROPERTIES FOLDER "Engine")